加入预测模型

--- a/templates/index.html
+++ b/templates/index.html
@@ -120,22 +120,24 @@
                         {% endif %}
                     {% endfor %}
                 ]
-            },{% endfor %}  {
-              id: 3,
-              province: '2016-05-01',
-              newConfirm: '王小虎',
-              totalComfirm: '上海市普陀区金沙江路 1519 弄',
+            },{% endfor %}
+            {#    {#}
+            {#  id: 3,#}
+            {#  province: '2016-05-01',#}
+            {#  newConfirm: '王小虎',#}
+            {#  totalComfirm: '上海市普陀区金沙江路 1519 弄',#}
               {#hasChildren: true,#}
-                children: [{
-
-                  id: 3-1,
-                  province: '2016-05-01',
-                  newConfirm: '王大虎',
-                  totalComfirm: '上海市普陀区金沙江路 1519 弄',
-
-
-                }]
-            }]
+            {#    children: [{#}
+            {##}
+            {#      id: 3-1,#}
+            {#      province: '2016-05-01',#}
+            {#      newConfirm: '王大虎',#}
+            {#      totalComfirm: '上海市普陀区金沙江路 1519 弄',#}
+            {##}
+            {##}
+            {#    }]#}
+            {#}#}
+            ]
           }
         },
         methods: {
